POFCC-155  Add tests